Updated the main container and the Aggregator Component

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Aggregator Test 5</title>
-  <base href="/aggregator">
+  <title>Aggregator Test 7</title>
+  <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -26,7 +26,7 @@
   <![endif]-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   <script src="https://code.angularjs.org/tools/system-polyfills.js"></script>
- <link href="styles.9dab447cdda8e770539d.bundle.css" rel="stylesheet"></head>
+ <link href="styles.d7f899714e3a8fd02e01.bundle.css" rel="stylesheet"></head>
 <body>
 
   <app-root>Loading... Aggregator</app-root>
@@ -39,5 +39,5 @@
           integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
           crossorigin="anonymous">
   </script>
-<script type="text/javascript" src="inline.9154ddba183237f49b23.bundle.js"></script><script type="text/javascript" src="vendor.b8b6535445ed1b9c2f10.bundle.js"></script><script type="text/javascript" src="main.9a26313a66d5e3b139b4.bundle.js"></script></body>
+<script type="text/javascript" src="inline.56b44257cf608801e7a4.bundle.js"></script><script type="text/javascript" src="vendor.c036ad4ca25b31be2917.bundle.js"></script><script type="text/javascript" src="main.69c64a24bcf0065b207e.bundle.js"></script></body>
 </html>
