Added Sidebar Transitions

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,7 +5,7 @@
   <title>Aggregator Test 7</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!--Bootstrap-->
@@ -26,7 +26,7 @@
   <![endif]-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/web-animations/2.2.2/web-animations.min.js"></script>
   <script src="https://code.angularjs.org/tools/system-polyfills.js"></script>
- <link href="styles.d7f899714e3a8fd02e01.bundle.css" rel="stylesheet"></head>
+ <link href="styles.748b707cbce7cb450f7c.bundle.css" rel="stylesheet"></head>
 <body>
 
   <app-root>Loading... Aggregator</app-root>
@@ -39,5 +39,5 @@
           integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
           crossorigin="anonymous">
   </script>
-<script type="text/javascript" src="inline.d9ffb5a37d1fbc39836c.bundle.js"></script><script type="text/javascript" src="vendor.c036ad4ca25b31be2917.bundle.js"></script><script type="text/javascript" src="main.4f3456a27210a8609802.bundle.js"></script></body>
+<script type="text/javascript" src="inline.a9813a559e3db5384d3a.bundle.js"></script><script type="text/javascript" src="vendor.c036ad4ca25b31be2917.bundle.js"></script><script type="text/javascript" src="main.95b9b39517990002063c.bundle.js"></script></body>
 </html>
